# self-driving-car-nd

./: lab.ipynb
term_1/: miniflow.py
term_1/Advanced-Lane-Lines/: README.md  calibration.py  detector.py  processing.py  search.py  utils.py
term_1/BehaviourColoning/: README.md  drive.py  driving_log.csv  model.json  model.py  model_1.py  preprocess.py
term_1/CarND-Advanced-Lane-Lines-P4/: line.py  run.py
term_1/CarND-Behaviour-Coloning-P3/: model.py  preprocess.py
term_1/CarND-Lane-Lines-P1/: test.py
term_1/CarND-Traffic-Sign-Classifier-P2/: Traffic_Sign_Classifier.ipynb  report.html
term_1/CarND-Vehicle-Detection/: classifier.py  detector.py  features.py  run.py  utils.py
term_1/CarND-Vehicle-Detection-P5/: features.py  run.py
term_1/Vehicle-Detection/: Readme.md  classifier.py  detector.py  model.pkl  utils.py
term_1/project_1/: P1.ipynb
term_2/CarND-Kidnapped-Vehicle-Project/: CMakeLists.txt  install-mac.sh
term_2/CarND-MPC-Project/: CMakeLists.txt  plot.py
term_2/CarND-PID-Control-Project/: CMakeLists.txt
term_2/CarND-Unscented-Kalman-Filter-Project/: CMakeLists.txt  regen_xcodeproj
term_2/CarND-Unscented-Kalman-Filter-Project/data/: output.txt
term_2/CarND-Unscented-Kalman-Filter-Project/src/: ctrv.cpp  ctrv.h  fushion.cpp  fushion.h  fusion.cpp  fusion.h  lidar.cpp  lidar.h  main.cpp  radar.cpp  radar.h  tools.cpp  tools.h  ukf.cpp  ukf.h
term_2/bayesian_filter/: CMakeLists.txt
term_3/CarND-Path-Planning-Project/: CMakeLists.txt  Model.md
term_3/NaiveBayes/: classifier.cpp  classifier.h  main.cpp
(+37 files in other folders)
